minikube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: kubebootsvc
    servicePort: 80
  rules:
  - host: kubeboot.info
    http:
      paths:
      - path: /
        backend:
          serviceName: kubebootsvc
          servicePort: 8080
